fixed footer spacing for colored blocks

--- a/assets/sass/design-system/layout.sass
+++ b/assets/sass/design-system/layout.sass
@@ -117,7 +117,7 @@ main .blocks
         .block-content
             padding-top: 0
     .block:last-child:is([class*="--accent_background"], [class*="--alt_background"], .block-timeline--horizontal, .block-pages--cards)
-        margin-bottom: var(--block-space-y)
+        margin-bottom: var(--grid-gutter)
 
 // page like 'infos pratiques' ending with 2 pages full width
 .page-ending-with-full-width-pages
